--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "astro-compress": "^2.0.15",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
-    "sass": "^1.67.0"
+    "sass": "^1.67.0",
+    "sharp": "^0.32.6"
   }
 }
